Refactor WhatsApp group links in index.html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
  <!-- Minimal CSS -->
  <link rel="stylesheet" href="style.css">
  <script>
+ // ✅ फक्त इथेच लिंक बदला (एकाच ठिकाणी)
+ const link = "https://whatsapp.com/channel/0029Vaf7cy9IyPtMrcT2af28";
+
  // Array of WhatsApp group links
  const groupLinks = [
-"https://whatsapp.com/channel/0029Vaf7cy9IyPtMrcT2af28",
-"https://whatsapp.com/channel/0029Vaf7cy9IyPtMrcT2af28"
+   link,
+   link
  ];
 
  // Function to generate a random index
