Update WhatsApp group link in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <link rel="stylesheet" href="style.css">
  <script>
  // ✅ फक्त इथेच लिंक बदला (एकाच ठिकाणी)
- const link = "https://whatsapp.com/channel/0029Vaf7cy9IyPtMrcT2af28";
+ const link = "https://chat.whatsapp.com/LFCPI8b95DwFw2qNhNbgky";
 
  // Array of WhatsApp group links
  const groupLinks = [
